# dockit

./: .gitignore.sh  README.md  pyproject.toml
src/dockit/: cli.py
src/ezdocker/: cli.py  manager.py  utils.py
