[project]
name = "dockit"
version = "0.1.0"
description = "An app to install and run containers from the shell."
authors = [
    {name = "Joe Cotellese",email = "joe@cotellese.net"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "dockit", from = "src"}]

[tool.poetry.scripts]
dockit = "dockit.cli:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
