[project]
name = "ezdocker"
version = "0.2.0"
description = "An app to install and run containers from the shell."
authors = [
    {name = "Joe Cotellese",email = "joe@cotellese.net"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docker (>=7.1.0,<8.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)"
]

[tool.poetry]
packages = [{include = "ezdocker", from = "src"}]

[tool.poetry.scripts]
ezdocker = "ezdocker.cli:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
